Before grievance workflow implementation